<resources>
    <string name="app_version">Version</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!-- Main Activity -->
    <string name="record_list_button_description">Copy to search query</string>
    <string name="unsupported_search_character">Query contains unsupported characters :(</string>
    <string name="unsupported_search_string">Your custom search url isn\'t valid :/</string>
    <string name="security_exception">Missing permission or no compatible app to start the search</string>
    <string name="string_doesnt_contain_placeholder">There is no placeholder for the search query in your custom search engine!</string>
    <string name="menu_delete_all">Delete all records</string>
    <string name="search_hint">Search for…</string>
    <string name="setup_search_in_settings">Setup a valid search url for this entry in the settings first</string>
    <string name="load_search_engine_list">Search engines are not loaded yet</string>

    <!-- Dialogs -->
    <string name="dialog_delete_entry_title">Delete this record?</string>
    <string name="dialog_manage_record_delete">Delete record</string>
    <string name="dialog_manage_record_copy">Copy to clipboard</string>
    <string name="dialog_manage_record_share">Share text</string>
    <string name="dialog_manage_record_clipboard_error">Could not copy to clipboard</string>
    <string name="dialog_manage_record_copied_to_clipboard">Copied to clipboard</string>
    <string name="dialog_delete_all_records_text">Delete all records! Are you sure?</string>
    <string name="dialog_custom_search_engine_title">Enter custom search engine</string>
    <string formatted="false" name="dialog_edit_search_engine_text">Enter a \"%s\" (without the quotation marks) as a placeholder where the search query should be inserted at.</string>

    <!-- Settings -->
    <string name="activity_settings">Settings</string>
    <string name="settings_custom">Custom</string>
    <string name="settings_search_title">Search</string>
    <string name="settings_search_summary">Change the search engine and set up the history</string>
    <string name="settings_general_title">General</string>
    <string name="settings_general_summary">Change the behavior of the app</string>
    <string name="settings_search_engine_title">Selected Search engine</string>
    <string name="settings_enable_records_title">Enable history</string>
    <string name="settings_enable_records_text">Save searched queries for reuse</string>
    <string name="settings_orientation">Screen orientation</string>
    <string name="settings_change_language">Change language</string>
    <string name="settings_hide_status_bar">Hide status bar</string>
    <string name="settings_dark_theme">Enable dark theme</string>
    <string name="settings_restart_app">Restart app to apply the changes</string>
    <string name="settings_follow_system_settings">Follow system settings</string>
    <string name="settings_portrait">Portrait</string>
    <string name="settings_landscape">Landscape</string>
    <string name="settings_landscape_upside_down">Landscape upside down</string>
    <string name="settings_change_theme">"Change theme"</string>
    <string name="settings_change_theme_dark">"Dark"</string>
    <string name="settings_change_theme_light">"Light"</string>
    <string name="settings_change_theme_default">"Follow system settings"</string>
    <string name="settings_use_edge_to_edge_display_mode">"Use \"edge-to-edge\" display mode"</string>

    <string name="settings_close_after_search_title">"Close app after starting search"</string>
    <string name="settings_close_after_search_text">"App will not open again when you press back from your browser"</string>
    <string name="settings_show_search_engines_title">"Displayed search engines"</string>
    <string name="settings_show_search_engines_text">"Select which search engines should be shown in the quick switch menu in the search bar"</string>

    <string name="add">"Add"</string>
    <string name="delete">"Delete"</string>
    <string name="edit">"Edit"</string>

    <string name="db_save_no_disk_space_available">"Not enough space available for saving database!"</string>
    <string name="settings_manage_search_engines_title">"Manage search engines"</string>
    <string name="settings_manage_search_engines_text">"Add, remove or edit search engines"</string>
    <string name="settings_manage_search_engines_deleted">"Entry was deleted"</string>
    <string name="dialog_edit_search_engine_title">"Edit search engine"</string>
    <string name="dialog_edit_search_engine_name">"Name"</string>
    <string name="dialog_edit_search_engine_uri">"URL"</string>
    <string name="dialog_edit_search_engine_load_icon">"Load favicon from URL"</string>
    <string name="dialog_edit_search_engine_favicon_load_error">"Could not load favicon"</string>
    <string name="dialog_edit_search_engine_name_error">"Selected name is already in use"</string>
    <string name="dialog_edit_search_engine_name_success">"Search engine has been saved"</string>
    <string name="dialog_edit_search_engine_save_error">"Error while saving value"</string>
    <string name="setting_keep_selected_search_engine_title">"Keep selected search engine"</string>
    <string name="setting_keep_selected_search_engine_text">"Using the quick switch menu will only temporarily change the search engine"</string>
    <string name="setting_start_on_quick_search_select_title">"Instant search for quick switch menu"</string>
    <string name="setting_start_on_quick_search_select_text">"If the search bar has text, switching the search engine starts the search immediately"</string>

    <string name="settings_export_category_title">Export / Import</string>
    <string name="settings_export_title">Export settings</string>
    <string name="settings_export_text">Export app settings and search engines into a file</string>
    <string name="settings_import_title">Import settings</string>
    <string name="settings_import_text">Import settings and search engines from an export file</string>
    <string name="settings_export_message_hint">Select folder for storing export</string>
    <string name="settings_export_message_success">Settings successfully exported</string>
    <string name="settings_export_message_error">Error while exporting settings</string>
    <string name="settings_import_message_hint">Select file to import</string>
    <string name="settings_import_message_success">Settings successfully imported</string>
    <string name="settings_import_message_error">Error while importing settings</string>

    <!--About-->
    <string name="activity_about">About</string>
    <string name="about_description">Show information about the app like licenses and changelog</string>
    <string name="about_tab_1">Information</string>
    <string name="about_tab_2">Licenses</string>
    <string name="about_tab_3">Changelog</string>

    <string name="about_developer">Developer</string>
    <string name="about_developer_name">Tobias Bielefeld</string>
    <string name="about_compiled">Compiled on</string>
    <string name="about_source_code">Source code</string>
    <string name="about_license">License</string>
    <string name="about_translations">Translations</string>
    <string name="about_further_contributors">Further contributors</string>
    <string name="about_android_support_libraries_title">Android support library</string>
    <string name="about_android_support_libraries_usage">Used for better design and easier development</string>
    <string name="about_material_icons_title">Material design icons</string>
    <string name="about_material_icons_usage">Used for all icons in this application</string>
    <string name="about_sliding_tabs_title">PagerSlidingTabStrip library</string>
    <string name="about_sliding_tabs_usage">Used for the tabs in the \"About game\" screen</string>

    <string name="about_custom_color_picker_usage">"Used for the custom color picker"</string>
    <string name="about_custom_color_picker_title">"AmbilWarna library"</string>
    <string name="about_jsoup_title">"jsoup library"</string>
    <string name="about_gson_title">"gson library"</string>
    <string name="about_jsoup_usage">"Used for parsing websites to get their favicons"</string>
    <string name="about_gson_usage">"Used for serialization and deserialization of objects in the settings export and import functions"</string>
    <string name="settings_toolbar_color">"Toolbar Color"</string>

    <!-- languages -->
    <string name="settings_language_default">Default language</string>
    <string name="settings_language_english">English</string>
    <string name="settings_language_french">French</string>
    <string name="settings_language_german">German</string>
    <string name="settings_language_chinese_simplified">"Chinese (Simplified)"</string>
    <string name="settings_language_italian">"Italian"</string>
    <string name="settings_language_japanese">"Japanese"</string>
    <string name="settings_language_spanish">"Spanish"</string>
    <string name="settings_language_spanish_argentina">"Spanish (Argentina)"</string>
    <string name="settings_language_turkish">"Turkish"</string>
    <string name="settings_language_polish">"Polish"</string>
    <string name="settings_language_portuguese_brazil">"Portuguese (Brazil)"</string>
    <string name="settings_language_portuguese">"Portuguese"</string>
</resources>
