<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="de.tobiasbielefeld.searchbar.ui.settings.Settings$SearchPreferenceFragment"
        android:summary="@string/settings_search_summary"
        android:title="@string/settings_search_title" />

    <header
        android:fragment="de.tobiasbielefeld.searchbar.ui.settings.Settings$GeneralPreferenceFragment"
        android:summary="@string/settings_general_summary"
        android:title="@string/settings_general_title" />

    <header
        android:summary="@string/about_description"
        android:title="@string/activity_about">
        <intent
            android:targetClass="de.tobiasbielefeld.searchbar.ui.about.AboutActivity"
            android:targetPackage="de.tobiasbielefeld.searchbar" />
    </header>

</preference-headers>